objects/Recorded_Information__c.object
<CustomObject>
    <fields>
        <fullName>Future_Value_x_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c *  Opportunity__r.Investor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Value multiplied by Investor %</inlineHelpText>
        <label>Future Value x IP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HB_OAV_Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HB - OAV Addendum Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Inspection_Fee_due_to__c</fullName>
        <description>Name of the entity to which the Home Inspection Fee is Owed</description>
        <label>Home Inspection Fee due to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Assignment_DOT__c</fullName>
        <description>Used in Nintex. Logic for including the Assignment in Closing Documents.</description>
        <formula>CASE( Property_State__c ,
"AZ", 1,
"CA", 1,
"MO", 1,
"NV", 1,
"OR", 1,
"TN", 1,
"UT", 1, 0)= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Assignment - DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Assignment_Mortgage_HB_Multi__c</fullName>
        <formula>Opportunity__r.Record_Type_Name__c = "HomeBuyer"

&amp;&amp;

CASE( Property_State__c ,
"DE", 1,
"IN", 1,
"IL", 1,
"KS", 1,
"KY", 1,
"MN", 1,
"NM", 1,
"NJ", 1,
"OH", 1, 0)= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Assignment - Mortgage (HB Multi)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Assignment_Mortgage__c</fullName>
        <description>Used in Nintex. Logic for including the Assignment in Closing Documents.</description>
        <formula>CASE( Property_State__c ,
"DE", 1,
"IN", 1,
"KS", 1,
"MN", 1,
"NJ", 1,
"NM", 1, 0)= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Assignment - Mortgage (HO Multi)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_MA_Written_Consent2__c</fullName>
        <description>Used in Nintex - If MA property is in one of these Counties, include Written Consent form in HO Closing Package.</description>
        <formula>IF(
AND(  Opportunity__r.Property_State__c  = "MA",   Opportunity__r.Record_Type_Name__c = "HomeOwner",
(OR(Opportunity__r.Property_County__c = "North Berkshire",
Opportunity__r.Property_County__c = "Middle Berkshire",
Opportunity__r.Property_County__c = "South Berkshire",
Opportunity__r.Property_County__c= "Franklin",
Opportunity__r.Property_County__c= "Hampshire",
Opportunity__r.Property_County__c= "Hampden",
Opportunity__r.Property_County__c= "North Worcester",
Opportunity__r.Property_County__c= "Worcester",
Opportunity__r.Property_County__c= "North Middlesex",
Opportunity__r.Property_County__c= "South Middlesex",
Opportunity__r.Property_County__c= "North Essex",
Opportunity__r.Property_County__c= "South Essex",
Opportunity__r.Property_County__c= "Suffolk",
Opportunity__r.Property_County__c= "Norfolk",
Opportunity__r.Property_County__c= "North Bristol",
Opportunity__r.Property_County__c= "Fall River",
Opportunity__r.Property_County__c= "South Bristol",
Opportunity__r.Property_County__c= "Plymouth",
Opportunity__r.Property_County__c= "Barnstable",
Opportunity__r.Property_County__c= "Dukes",
Opportunity__r.Property_County__c = "Nantucket"))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Nintex - If MA property is in one of these Counties, include Written Consent form in HO Closing Package.</inlineHelpText>
        <label>Include MA - Written Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_OAV_Addendum__c</fullName>
        <description>Used in Nintex - Include OAV Addendum in HO/HB Closing Documents if Opportunity has 2 Appraisals, OAV Discount &gt; 0, or IA OAV Override &gt; 0</description>
        <formula>IF ( 
OR( Opportunity__r.Has_2_Appraisals2__c = True, Opportunity__r.OAV_Discount_Amount__c &gt; 0,  Opportunity__r.IA_OAV_Override__c &gt; 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Nintex - Include OAV Addendum in HO/HB Closing Documents if Opportunity has 2 Appraisals, OAV Discount &gt; 0, or IA OAV Override &gt; 0</inlineHelpText>
        <label>Include OAV Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Trust_Rider_HB_OR__c</fullName>
        <description>Used in Nintex to insert Trust Rider Document if it is a HB in OR.</description>
        <formula>AND( Opportunity__r.Record_Type_Name__c = "HomeBuyer",

CASE( Property_State__c ,
"OR", 1,
0 ) = 1,

OR(
NOT(ISBLANK(Applicant_Trust_Signature__c)),
NOT(ISBLANK(Co_Applicant_Trust_Signature__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Trust Rider (HB - OR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Trust_Rider__c</fullName>
        <description>Used in Nintex to insert Trust Rider Document if it is a HB in WA.</description>
        <formula>AND( Opportunity__r.Record_Type_Name__c  = "HomeBuyer",

CASE( Property_State__c ,
"WA", 1,
0 ) = 1,

OR(
NOT(ISBLANK(Applicant_Trust_Signature__c)), 
NOT(ISBLANK(Co_Applicant_Trust_Signature__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Trust Rider (HB - WA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_if_NY_NJ_PA__c</fullName>
        <description>Nintex - Documents for NY, NJ, PA</description>
        <formula>OR( Property_State__c = "NY",
Property_State__c = "NJ",
Property_State__c = "PA")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include if NY, NJ, PA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Mountain_Account__c</fullName>
        <label>Iron Mountain Account #:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lender_Address__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter Lender company address as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lender_Business_Entity__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter Lender company name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - Business Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Email__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter lender email address as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lender_First_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Last_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Phone__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter Lender phone number as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Lender - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Less_Purchase_Price_Balance__c</fullName>
        <label>ZZZ Less Purchase Price Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managers_Name__c</fullName>
        <label>Managers Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ismael Casas, Jr.</fullName>
                </value>
                <value>
                    <fullName>John Pingel</fullName>
                </value>
                <value>
                    <fullName>Rayan Rafay</fullName>
                </value>
                <value>
                    <fullName>John Arens</fullName>
                </value>
                <value>
                    <fullName>Lily Kwong</fullName>
                </value>
                <value>
                    <fullName>Matthew Johnson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managers_Title__c</fullName>
        <label>Managers Title</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Managers_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Memorandum_of_Agreement_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Memorandum of Agreement:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memorandum_of_Agreement_Instrument_No__c</fullName>
        <label>Memorandum of Agreement Instrument No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memorandum_of_Covenants__c</fullName>
        <description>See PB: Recorded Information: Property State Changed or Created</description>
        <inlineHelpText>Memorandum of Covenants Running with the Land state-specific language which appears on the multi-state Memorandum.</inlineHelpText>
        <label>Memorandum of Covenants RWTL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Application_Spouse__c</fullName>
        <description>Needed if spouses signature is needed on docs. (Field not added to docs yet - future state). AM 5.11.20</description>
        <inlineHelpText>Needed if spouses signature is needed on docs. (Field not added to docs yet - future state). AM 5.11.20</inlineHelpText>
        <label>Non-Application Spouse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OAV_Addendum_Doc2__c</fullName>
        <description>Used in Nintex to insert doc if 2nd Appraisal Requirement is True or if OAV Discount is &gt; 0.</description>
        <formula>IF(
OR (Opportunity2__r.Greenlight_Requires_Second_Appraisal__c =TRUE,  Opportunity2__r.OAV_Discount_Amount__c &gt;0), TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OAV Addendum Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAV_Addendum_to_Unison_HO_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ OAV Addendum to Unison HO Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Acceptance_Deadline__c</fullName>
        <description>Opportunity__r.Offer_Package_Date2__c  + 10</description>
        <formula>Opportunity__r.Offer_Package_Date2__c  + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date Offer Package was Generated + 10 days.</inlineHelpText>
        <label>Offer Acceptance Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recorded Informations (Opportunity2)</relationshipLabel>
        <relationshipName>Recorded_Informations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recorded Informations</relationshipLabel>
        <relationshipName>Recorded_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_Agreement_Expiration2__c</fullName>
        <description>Used in Closing Docs: Option Agreement</description>
        <formula>ADDMONTHS( Effective_Date__c,360) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>30 years from effective date minus 1 day.</inlineHelpText>
        <label>Option Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Agreement_Expiration__c</fullName>
        <description>30 years from effective date minus 1 day. See Process Builder: "Recorded Information: Option Agreement Expiration Date"</description>
        <inlineHelpText>30 years from effective date minus 1 day.</inlineHelpText>
        <label>ZZZ Option Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Purchase_Price_Balance__c</fullName>
        <formula>Option_Purchase_Price__c  -  Opportunity2__r.Estimated_Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Option Purchase Price - OIP</inlineHelpText>
        <label>Option Purchase Price Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Purchase_Price__c</fullName>
        <formula>ROUND(Opportunity2__r.Investor_Percentage__c,4) *  Opportunity2__r.Final_OAV_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Investor Percentage x Final OAV</inlineHelpText>
        <label>Option Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Original Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_CAP_Package_If_no_Docu_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Original CAP Package - If no Docu-</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Recorded_Memorandum_of_Agreemen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Original Recorded Memorandum of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Subordination_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Original Subordination Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Unison_HO_Covenant_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZOriginal Unison HO Covenant Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Unison_HO_Option_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Original Unison HO Option Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCStatus__c</fullName>
        <defaultValue>"Active"</defaultValue>
        <label>Post-Close Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_to_Unison_1__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>( Opportunity2__r.Final_OAV_Calculation__c   * 1.12) *  Opportunity2__r.Investor_Percentage__c  -  Option_Purchase_Price_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV  * 1.12) * Investor % - Option Purchase Price Balance</inlineHelpText>
        <label>Payment to Unison1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_to_Unison_2__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c   * 1.4) *  Opportunity__r.Investor_Percentage__c  -  Option_Purchase_Price_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV x 1.4) x Investor % - Option Purchase Price Balance</inlineHelpText>
        <label>Payment to Unison2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_to_Unison_3__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c  * 0.88) *  Opportunity__r.Investor_Percentage__c  -  Option_Purchase_Price_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV x .88) x Investor % - Option Purchase Price Balance</inlineHelpText>
        <label>Payment to Unison3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Close_Stage__c</fullName>
        <label>ZZZ Post Close Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Close_Status__c</fullName>
        <label>ZZZ Post Close Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Information From Applicant</fullName>
                </value>
                <value>
                    <fullName>Package Sent - Pending Approval from County</fullName>
                </value>
                <value>
                    <fullName>Final Settlement Closing Statement Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Of_Attorney_Language__c</fullName>
        <label>Power Of Attorney Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Parcel_Number__c</fullName>
        <description>Property_Parcel_Number was used from May to Sept '19. RecInfo Parcel # was used from Oct '19 to Current. Need to combine fields. AM 5/11/20</description>
        <label>Property Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>Used for Nintex - HO Offer Package to populate Corporate Entity + State</description>
        <label>Property State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recorded_Date_Memorandum_of_Agreement__c</fullName>
        <label>Memorandum of Agreement: Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recorded_Information_Applicant2_Name__c</fullName>
        <label>ZZZ Recorded Information Applicant2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording_Date__c</fullName>
        <label>ZZZ Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Servicing_Org_AKA__c</fullName>
        <label>Servicing Org AKA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Org_State__c</fullName>
        <formula>"Delaware"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Org State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Organization__c</fullName>
        <formula>'Unison Agreement Corp'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_All_Caps__c</fullName>
        <description>Used for Nintex</description>
        <label>State - All Caps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Address__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter title company address as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Business_Entity__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter title company name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - Business Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Case_Number__c</fullName>
        <description>Duplicate to Title Case Number on Opportunity. This one is not filled in or used.</description>
        <label>ZZZ Title Case Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Email__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter email as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Title_First_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Last_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Phone__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter phone number as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Title - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trust_Information__c</fullName>
        <label>Trust Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trust_Rider_HO_Multi__c</fullName>
        <description>Nintex - HO Closing Package if customer is HO and has Trust Signatures</description>
        <formula>AND(
Opportunity__r.Record_Type_Name__c = "HomeOwner",

OR(
NOT(ISBLANK(Applicant_Trust_Signature__c)),
NOT(ISBLANK(Co_Applicant_Trust_Signature__c))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nintex - HO Closing Package if customer is HO and has Trust Signatures</inlineHelpText>
        <label>Trust Rider (HO - Multi)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trustee_Address__c</fullName>
        <description>Address of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Address of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trustee_Business_Entity_Account__c</fullName>
        <description>Entity Name of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Entity Name of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - Business Entity (Account)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Email__c</fullName>
        <description>Email Address of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Email Address of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name__c</fullName>
        <description>First Name of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>First Name of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name__c</fullName>
        <description>Last Name of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Last Name of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone__c</fullName>
        <description>Phone Number of the Trustee to appear on Docs. This field is used by the Transaction Specialists: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Phone Number of the Trustee to appear on Docs.</inlineHelpText>
        <label>Trustee - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unison_Gain_Loss1__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c  * 1.12) *  Opportunity__r.Investor_Percentage__c -  Option_Purchase_Price_Balance__c  -  Opportunity__r.Estimated_Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV * 1.12) * Investor % - Option Purchase Price Balance - OIP</inlineHelpText>
        <label>Unison Gain Loss 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unison_Gain_Loss_2__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>( Opportunity__r.Final_OAV_Calculation__c   * 1.4) *  Opportunity__r.Investor_Percentage__c -  Option_Purchase_Price_Balance__c  - Opportunity__r.Estimated_Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV * 1.4) * Investor % - Option Purchase Price Balance - OIP</inlineHelpText>
        <label>Unison Gain Loss 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unison_Gain_Loss_3__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c  * 0.88) * Opportunity__r.Investor_Percentage__c - Option_Purchase_Price_Balance__c - Opportunity__r.Estimated_Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV * .88) * Investor % - Option Purchase Price Balance - OIP</inlineHelpText>
        <label>Unison Gain Loss 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unison_Gain_Loss_4__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP, HO Offer Letter, &amp; Revised Offer Letter. As a negative value, the value cannot be greater than the OIP.</description>
        <formula>IF
(((Opportunity__r.Final_OAV_Calculation__c * 0.75) * Opportunity__r.Investor_Percentage__c - Option_Purchase_Price_Balance__c - Opportunity__r.Estimated_Funding_Amount__c) &lt; (-1* Opportunity__r.Estimated_Funding_Amount__c),

(-1* Opportunity__r.Estimated_Funding_Amount__c),

(Opportunity__r.Final_OAV_Calculation__c * 0.75) * Opportunity__r.Investor_Percentage__c - Option_Purchase_Price_Balance__c - Opportunity__r.Estimated_Funding_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Final OAV * .75) * Investor % - Option Purchase Price Balance - OIP</inlineHelpText>
        <label>Unison Gain Loss 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unison_Program_Legal__c</fullName>
        <label>Unison Program Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unison_Program_Name__c</fullName>
        <label>Unison Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Name__c</fullName>
        <label>Vesting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Organization_Final_Description2__c</fullName>
        <description>Wrong formula &amp; duplicate to Customer Final Vesting.</description>
        <label>ZZZ Final Vesting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vesting_Organization_Name2_del__c</fullName>
        <label>Vesting Organization Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vesting_Organization_State__c</fullName>
        <label>Vesting Organization State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Organization_Tax_ID__c</fullName>
        <label>Vesting Organization Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Organization_Type__c</fullName>
        <label>Vesting Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>